Web interface roughing.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,2 +1,2 @@
-<h1>Hello World Webapp</h1>
-<a href="/hello">Hello Servlet</a>
+<h1>OpenDCT Jetty Server</h1>
+<a href="/sagetvmanager">Capture Device List</a>
