More web interface coding.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -3,8 +3,9 @@
 <head>
     <link rel="stylesheet" type="text/css" href="css/opendct.css"/>
     <title>OpenDCT Web Interface</title>
+    <meta http-equiv="refresh" content="0; url=opendct" />
 </head>
 <body>
 <h1>OpenDCT Web Interface</h1>
-<a href="/sagetvmanager">Capture Device List</a>
+<a href="opendct">Home</a>
 </body>
