Capture devices can now be loaded during runtime.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/opendct.css"/>
     <title>OpenDCT Web Interface</title>
     <meta http-equiv="refresh" content="0; url=opendct" />
 </head>
 <body>
 <h1>OpenDCT Web Interface</h1>
+<div id="content">
 <a href="opendct">Home</a>
+</div>
 </body>
