--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -1,14 +1,75 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+
     <link rel="stylesheet" type="text/css" href="css/opendct.css"/>
+
     <title>OpenDCT Web Interface</title>
-    <meta http-equiv="refresh" content="0; url=opendct" />
+    <!--<meta http-equiv="refresh" content="0; url=opendct" />-->
 </head>
 <body>
-<h1>OpenDCT Web Interface</h1>
-<div id="content">
-<a href="opendct">Home</a>
-</div>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#dashboard">OpenDCT</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li id="dashboard-nav"><a class="change-page" href="#dashboard">Dashboard</a></li>
+                <li id="manage-nav"><a class="change-page" href="#manage">Manage</a></li>
+                <li id="lineups-nav"><a class="change-page" href="#lineups">Lineups</a></li>
+                <li id="pools-nav"><a class="change-page" href="#pools">Pools</a></li>
+                <li id="config-nav"><a class="change-page" href="#config">Config</a></li>
+            </ul>
+        </div><!--/.nav-collapse -->
+    </div>
+</nav>
+
+<div class="container">
+    <div id="dashboard-page" class="content-page">
+        Dashboard
+    </div>
+
+    <div id="manage-page" class="content-page">
+        Manage
+    </div>
+
+    <div id="lineups-page" class="content-page">
+        Lineups
+    </div>
+
+    <div id="pools-page" class="content-page">
+        Pools
+    </div>
+
+    <div id="config-page" class="content-page">
+        Config
+    </div>
+</div><!-- /.container -->
+
+
+<!-- Bootstrap core JavaScript
+    ================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+<script src="js/common.js"></script>
 </body>
