--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -42,23 +42,38 @@
 
 <div class="container">
     <div id="dashboard-page" class="content-page">
-        Dashboard
+        <h1>Capture Devices</h1>
+        <div id="dashboard-content">
+            <div class="table-responsive">
+                <table id="dashboard-capture-devices" class="table table-striped table-bordered">
+
+                </table>
+            </div>
+        </div>
     </div>
 
     <div id="manage-page" class="content-page">
-        Manage
+        <div id="manage-content">
+
+        </div>
     </div>
 
     <div id="lineups-page" class="content-page">
-        Lineups
+        <div id="lineups-content">
+
+        </div>
     </div>
 
     <div id="pools-page" class="content-page">
-        Pools
+        <div id="pools-content">
+
+        </div>
     </div>
 
     <div id="config-page" class="content-page">
-        Config
+        <div id="config-content">
+
+        </div>
     </div>
 </div><!-- /.container -->
 
@@ -71,5 +86,6 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
+<script src="js/moment.min.js"></script>
 <script src="js/common.js"></script>
 </body>
