Capture devices can now be  loaded via the web interface.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -74,15 +74,15 @@
             <div class="">
 
                 <h1>Unloaded Capture Devices</h1>
-                <button id="manage-add-unloaded-device" type="button" class="btn btn-primary">
-                    Add Capture Device
+                <button id="manage-add-unloaded-device" type="button" class="btn btn-primary disabled">
+                    Load Capture Device
                 </button><p/>
 
                 <table id="manage-unloaded-capture-devices-table" class="table table-striped">
                     <thead id="manage-unloaded-capture-devices-header">
                     <tr>
-                        <th id="manage-unloaded-check-header">Check Box</th>
-                        <th id="manage-unloaded-name-header">Unloaded Capture Device</th>
+                        <th id="manage-unloaded-check-header"><input class="manage-unloaded-checkbox-all" type="checkbox" value="CheckAllUnloadedDevices"></th>
+                        <th id="manage-unloaded-name-header">Capture Device</th>
                         <th id="manage-unloaded-description-header">Description</th>
                     </tr>
                     </thead>
