--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -73,6 +73,64 @@
         <div id="manage-content">
             <div class="">
 
+                <h1>Parent Capture Devices</h1>
+                <button id="manage-apply-parent-device-changes" type="button" class="btn btn-primary disabled">
+                    Apply Changes
+                </button><p/>
+
+                <table id="manage-loaded-parent-devices-table" class="table table-striped">
+                    <thead id="manage-loaded-parent-devices-header">
+                    <tr>
+                        <th id="manage-parent-name-header">Capture Device Parent</th>
+                        <th id="manage-is-network-header">Network Device</th>
+                        <th id="manage-remote-ip-header">Remote IP Address</th>
+                        <th id="manage-local-ip-header">Local IP Address</th>
+                        <th id="manage-cablecard-present-header">CableCARD Present</th>
+                    </tr>
+                    </thead>
+                    <tbody id="manager-loaded-parent-devices-body">
+                    <!-- The automatically populated loaded capture devices go here. -->
+                    </tbody>
+                    <tfoot>
+                    <tr>
+                        <th id="manage-parent-name-footer">&nbsp;</th>
+                        <th id="manage-is-network-footer">&nbsp;</th>
+                        <th id="manage-remote-ip-footer">&nbsp;</th>
+                        <th id="manage-local-ip-footer">&nbsp;</th>
+                        <th id="manage-cablecard-present-footer">&nbsp;</th>
+                    </tr>
+                    </tfoot>
+                </table>
+
+                <h1>Loaded Capture Devices</h1>
+                <button id="manage-apply-loaded-device-changes" type="button" class="btn btn-primary disabled">
+                    Apply Changes
+                </button><p/>
+
+                <table id="manage-loaded-devices-table" class="table table-striped">
+                    <thead id="manage-loaded-devices-header">
+                    <tr>
+                        <th id="manage-check-header"><input class="manage-loaded-checkbox-all" type="checkbox" value="CheckAllLoadedDevices"></th>
+                        <th id="manage-name-header">Capture Device</th>
+                        <th id="manage-merit-header">Merit</th>
+                        <th id="manage-force-unlock-header">Force Unlock</th>
+                        <th id="manage-consumer-header">Consumer</th>
+                        <th id="manage-lineup-header">Lineup</th>
+                        <th id="manage-encoder-pool-header">Pool</th>
+                    </tr>
+                    </thead>
+                    <tbody id="manager-loaded-devices-body">
+                    <!-- The automatically populated loaded capture devices go here. -->
+                    </tbody>
+                    <tfoot>
+                    <tr>
+                        <th id="manage-check-footer">&nbsp;</th>
+                        <th id="manage-name-footer">&nbsp;</th>
+                        <th id="manage-rename-footer">&nbsp;</th>
+                    </tr>
+                    </tfoot>
+                </table>
+
                 <h1>Unloaded Capture Devices</h1>
                 <button id="manage-add-unloaded-device" type="button" class="btn btn-primary disabled">
                     Load Capture Device
@@ -87,7 +145,7 @@
                     </tr>
                     </thead>
                     <tbody id="manager-unloaded-capture-devices-body">
-                    <!-- The automatically populated capture devices go here. -->
+                    <!-- The automatically populated unloaded capture devices go here. -->
                     </tbody>
                     <tfoot>
                     <tr>
