--- a/distribution/licenses/Licenses by Dependency.html
+++ b/distribution/licenses/Licenses by Dependency.html
@@ -74,6 +74,9 @@
         <td class='dependencies'>
           <ul>
 			<li><a href='https://github.com/enternoescape/cling'>cling-core-2.1.0-SNAPSHOT.jar</a></li>
+            <li><a href='https://github.com/jersey/jersey/tree/master/core-client'>jersey-client-2.22.1.jar</a></li>
+            <li><a href='https://github.com/jersey/jersey/tree/master/containers/jersey-servlet-core'>jersey-container-servlet-2.22.1.jar</a></li>
+            <li><a href='https://github.com/jersey/jersey/tree/master/core-server'>jersey-server-2.22.1.jar</a></li>
             <li><a href='https://github.com/4thline/seamless/tree/master/http'>seamless-http-1.1.0.jar</a></li>
             <li><a href='https://github.com/4thline/seamless/tree/master/util'>seamless-util-1.1.0.jar</a></li>
             <li><a href='https://github.com/4thline/seamless/tree/master/xml'>seamless-xml-1.1.0.jar</a></li>
@@ -87,11 +90,14 @@
         </td>
         <td class='dependencies'>
           <ul>
-            <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-core-2.3.jar</a></li>
-            <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-api-2.3.jar</a></li>
-			<li><a href='https://commons.apache.org/proper/commons-cli/download_cli.cgi'>commons-cli-1.3.jar</a></li>
-			<li><a href='https://github.com/java-native-access/jna'>jna-platform-4.2.1.jar</a></li>
+            <li><a href='https://commons.apache.org/proper/commons-cli/download_cli.cgi'>commons-cli-1.3.jar</a></li>
+            <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-api-2.5.jar</a></li>
+            <li><a href='https://logging.apache.org/log4j/2.x/source-repository.html'>log4j-core-2.5.jar</a></li>
+            <li><a href='https://github.com/eclipse/jetty.project/tree/master/jetty-runner'>jetty-runner-9.3.6.v20151106.jar</a></li>
+            <li><a href='https://github.com/eclipse/jetty.project/tree/master/jetty-servlet'>jetty-servlet-9.3.6.v20151106.jar</a></li>
+            <li><a href='https://github.com/eclipse/jetty.project/tree/master/jetty-server'>jetty-server-9.3.6.v20151106.jar</a></li>
             <li><a href='https://github.com/java-native-access/jna'>jna-4.2.1.jar</a></li>
+            <li><a href='https://github.com/java-native-access/jna'>jna-platform-4.2.1.jar</a></li>
           </ul>
         </td>
       </tr>      
