All but advanced capture device bulk editing are now available.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -128,7 +128,7 @@
                         <th id="manage-check-header"><input title="Select the rows to change and edit any one of them to modify all of them." class="manage-loaded-checkbox-all" type="checkbox" value="CheckAllLoadedDevices"></th>
                         <th class="col-md-4" id="manage-name-header">Capture Device</th>
                         <th class="col-md-1" id="manage-merit-header" title="This value is sent to SageTV in PROPERTIES and is used for prioritizing capture devices in virtual device pools. A higher number means a higher preference.">Merit</th>
-                        <th class="col-md-1" id="manage-force-unlock-header" title="Always force the capture device to unlock if it is locked by an outside program.">Unlock</th>
+                        <th class="col-md-1" id="manage-force-unlock-header" title="Always force the capture device to unlock if it is locked by an external program.">Unlock</th>
                         <th class="col-md-2" id="manage-consumer-header" title="This is the post processing method to be used before the content is streamed to SageTV.">Consumer</th>
                         <th class="col-md-3" id="manage-lineup-header">Lineup</th>
                         <th class="col-md-2" id="manage-encoder-pool-header">Pool</th>
