Adding advanced property editing for capture devices.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -31,7 +31,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li id="dashboard-nav"><a class="change-page" href="#dashboard">Dashboard</a></li>
-                <li id="manage-nav"><a class="change-page" href="#manage">Manage</a></li>
+                <li id="manage-nav"><a class="change-page" href="#manage">Devices</a></li>
                 <li id="lineups-nav"><a class="change-page" href="#lineups">Lineups</a></li>
                 <li id="config-nav"><a class="change-page" href="#config">Configuration</a></li>
             </ul>
@@ -46,7 +46,7 @@
                 <thead id="dashboard-capture-devices-header">
                     <tr>
                         <th id="dashboard-device-name-header">Capture Device</th>
-                        <th id="dashboard-status-header">SageTV Status</th>
+                        <th id="dashboard-status-header">OpenDCT Status</th>
                         <th id="dashboard-locked-header">Device Lock</th>
                         <th id="dashboard-lineup-header">Lineup</th>
                         <th id="dashboard-pool-header">Pool</th>
