Moved advanced properties into the index.html file.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -70,8 +70,7 @@
 
     <div id="manage-page" class="content-page">
         <div id="manage-content">
-            <div class="">
-
+            <div id="manage-basic">
                 <h1>Parent Capture Devices</h1>
                 <button id="manage-apply-parent-device-changes" type="button" class="btn btn-primary disabled hidden">
                     Apply Changes
@@ -176,6 +175,9 @@
                     </tr>
                     </tfoot>
                 </table>
+            </div>
+            <div id="manage-advanced">
+                <h1>Advanced</h1>
             </div>
         </div>
     </div>
