Advanced settings button now works.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -177,7 +177,8 @@
                 </table>
             </div>
             <div id="manage-advanced">
-                <h1>Advanced</h1>
+                <h1>Advanced Capture Device Properties</h1>
+                <h3>Editing: </h3>
             </div>
         </div>
     </div>
@@ -205,4 +206,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 <script src="js/common.js"></script>
+<script src="js/manage-advanced.js"></script>
 </body>
