More advanced settings work.

--- a/src/main/webapps/opendct/index.html
+++ b/src/main/webapps/opendct/index.html
@@ -178,7 +178,11 @@
             </div>
             <div id="manage-advanced">
                 <h1>Advanced Capture Device Properties</h1>
-                <h3>Editing: </h3>
+                <div id="manage-advanced-devices"></div>
+                <br/>
+                <button id="manage-advanced-apply-changes" type="button" class="btn btn-primary disabled">
+                    Apply Settings
+                </button><p/>
             </div>
         </div>
     </div>
