Cleaned a few details up per suggestions from jslint.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -177,7 +177,7 @@
                     </tfoot>
                 </table>
             </div>
-            <div id="manage-advanced col-md-12 col-xs-12">
+            <div id="manage-advanced" class="col-md-12 col-xs-12">
                 <h1>Capture Device Properties</h1>
                 <div id="manage-advanced-devices"></div>
                 <br/>
